crates/osp-core/tests/compile_fail/c8_anchorplan_literal.stderr
warning: unused import: `AnchorCandidate`
 --> tests/compile_fail/c8_anchorplan_literal.rs:4:34
  |
4 | use osp_core::anchoring::types::{AnchorCandidate, AnchorPlan, ConceptPacketId};
  |                                  ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0451]: fields `packet_id`, `candidates`, `decision`, `threshold_band`, `requires_operator_review`, `negative_assertions` and `redirects` of struct `AnchorPlan` are private
  --> tests/compile_fail/c8_anchorplan_literal.rs:9:9
   |
 8 |     let _plan = AnchorPlan {
   |                 ---------- in this type
 9 |         packet_id: ConceptPacketId("pkt:x".into()),
   |         ^^^^^^^^^ private field
10 |         candidates: vec![],
   |         ^^^^^^^^^^ private field
11 |         decision: AnchorDecisionKind::MarkUnanchored,
   |         ^^^^^^^^ private field
12 |         threshold_band: ThresholdBand::Unanchored,
   |         ^^^^^^^^^^^^^^ private field
13 |         requires_operator_review: false,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ private field
14 |         negative_assertions: vec![],
   |         ^^^^^^^^^^^^^^^^^^^ private field
15 |         redirects: vec![],
   |         ^^^^^^^^^ private field
